force-app/main/default/objects/Form_Element__c/Form_Element__c.object-meta.xml
<CustomObject>
    <label>EDF Form Element</label>
    <nameField>
        <displayFormat>FE-{0000}</displayFormat>
        <label>Form Element Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>