force-app/main/default/objects/Form_Element__c/fields/Column_Type__c.field-meta.xml
<CustomField>
    <fullName>Column_Type__c</fullName>
    <inlineHelpText>Type of the column in the data table for related list when the parent section is configured as Related List Container</inlineHelpText>
    <label>Column Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>