force-app/main/default/objects/Form_Element__c/fields/Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>Custom_Label__c</fullName>
    <inlineHelpText>When the Related List Container checkbox on the parent section is checked this field is used for Label of the column in related list</inlineHelpText>
    <label>Custom Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>