force-app/main/default/objects/Form_Element__c/fields/Field_API_Lower_Case__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Lower_Case__c</fullName>
    <formula>SUBSTITUTE(  LOWER(Field_API_Name__c) ,&apos;_&apos;,&apos;-&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field API Lower Case</label>
    <type>Text</type>
</CustomField>