force-app/main/default/objects/Form_Element__c/fields/Form_Definition_Version_Formula__c.field-meta.xml
<CustomField>
    <fullName>Form_Definition_Version_Formula__c</fullName>
    <formula>Section__r.Form_Definition_Version__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Definition Version</label>
    <type>Text</type>
</CustomField>