force-app/main/default/objects/Form_Element__c/fields/Form_Element_Key__c.field-meta.xml
<CustomField>
    <fullName>Form_Element_Key__c</fullName>
    <formula>LOWER(Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Element Key</label>
    <type>Text</type>
</CustomField>