force-app/main/default/objects/Form_Element__c/fields/HTML_Snippet__c.field-meta.xml
<CustomField>
    <fullName>HTML_Snippet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HTML Snippet</label>
    <type>Checkbox</type>
</CustomField>