force-app/main/default/objects/Form_Element__c/fields/HTML_Snippet_Code__c.field-meta.xml
<CustomField>
    <fullName>HTML_Snippet_Code__c</fullName>
    <label>HTML Snippet Code</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>