force-app/main/default/objects/Form_Element__c/fields/Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this checkbox if the field configured for this Form Element is to be rendered as Read Only.</inlineHelpText>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>