force-app/main/default/objects/Form_Element__c/fields/Record_Gear_Key__c.field-meta.xml
<CustomField>
    <fullName>Record_Gear_Key__c</fullName>
    <inlineHelpText>The search text to find the gear when the key from event object in handleInputFieldChange function is different from the field api name of the sobject</inlineHelpText>
    <label>Record Gear Search Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>