force-app/main/default/objects/Form_Element__c/fields/Record_Gear_Key_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Record_Gear_Key_Mapping__c</fullName>
    <formula>IF( ISBLANK( Record_Gear_Key__c ) ,  LOWER(Field_API_Name__c) , LOWER(Record_Gear_Key__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Gear Mapping Key</label>
    <type>Text</type>
</CustomField>