force-app/main/default/objects/Form_Element__c/fields/Reference_Layout__c.field-meta.xml
<CustomField>
    <fullName>Reference_Layout__c</fullName>
    <formula>Section__r.Form_Definition_Version__r.Form_Definition__r.Object_API_Name__c  &amp; &quot; - &quot;  &amp;  Section__r.Form_Definition_Version__r.Form_Definition__r.Reference_Page_Layout__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Layout</label>
    <type>Text</type>
</CustomField>