force-app/main/default/objects/Form_Element__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Section</label>
    <referenceTo>Form_Container__c</referenceTo>
    <relationshipLabel>Form Elements</relationshipLabel>
    <relationshipName>Form_Elements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>