force-app/main/default/objects/Form_Element__c/validationRules/Field_API_Name_Mandatory_Scenario.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_API_Name_Mandatory_Scenario</fullName>
    <active>false</active>
    <description>Field API Name is Mandatory when HTML Snippet checkbox is unchecked</description>
    <errorConditionFormula>if( HTML_Snippet__c = false &amp;&amp;  ISBLANK( Field_API_Name__c ),true,false)</errorConditionFormula>
    <errorMessage>Field API Name is Mandatory when Form Element is not an HTML Snippet</errorMessage>
</ValidationRule>