force-app/main/default/objects/Form_Element__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Section__c</columns>
    <columns>Form_Definition_Version_Formula__c</columns>
    <columns>Active__c</columns>
    <columns>Reference_Layout__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Record_Gear_Key_Mapping__c</columns>
    <columns>Sequence__c</columns>
    <columns>Column__c</columns>
    <columns>Decision_Expression__c</columns>
    <columns>HTML_Snippet__c</columns>
    <columns>HTML_Snippet_Code__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Hidden__c</columns>
    <columns>Custom_Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>